# markymarkov

./: ARCHITECTURE_AND_DATAFLOW.md  BENCHMARK_RESULTS.md  BLOG.md  DESIGN.md  DOCUMENTATION_INDEX.md  HYPOTHESIS_ANALYSIS_SUMMARY.md  HYPOTHESIS_COMPLETION_SUMMARY.md  HYPOTHESIS_DELIVERABLES.txt  HYPOTHESIS_DOCUMENTATION_INDEX.md  HYPOTHESIS_IMPLEMENTATION_REPORT.md  HYPOTHESIS_QUICK_REFERENCE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.mindmap  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  INDEX.md  MINDMAP.md  PHASE_1_1_COMPLETE.md  PHASE_1_4_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_1_COMPLETE.md  PHASE_2_2_VALIDATION_COMPLETE.md  PLAN_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  SESSION_SUMMARY_COMPLETE.md  SESSION_SUMMARY_PHASE_1_3.md  VALIDATION_GUIDE.md  benchmark.py  benchmark_direct.py  benchmark_output.txt  benchmark_results.json  benchmark_summary.py  main.py  mise.toml  pyproject.toml
.sigil/: bookmarks.jsonl
benchmark_models/: ast_model.py  semantic_model.py
chronicles/: 2026-03-01-add-style-validate-plan.md  2026-03-01-code-review-and-bookmarks.md  2026-03-01-created-api-skeleton.md  2026-03-01-revise-plan-python.md  2026-03-01-wired-cli-subcommands.md  2026-03-02-added-unit-tests.md  2026-03-02-commit-api-and-tests.md
doc/: BLOG.md  BLOG_SUMMARY.md  DIAGNOSTIC_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  HYPOTHESIS_ANALYSIS_SUMMARY.md  HYPOTHESIS_COMPLETION_SUMMARY.md  HYPOTHESIS_DELIVERABLES.txt  HYPOTHESIS_DOCUMENTATION_INDEX.md  HYPOTHESIS_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_PLAN.md  (+25 more)
(+49 files in other folders)
